# tg_support_bot

./: README.md  email_sender.py  pyproject.toml  requirements.txt  run_test_email.bat  setup.bat  start_bot.bat  start_bot.sh  start_test_email.bat  telegram_bot.py
config/: auth.yaml  ui_config.yaml
modules/: admin_commands.py  auth.py  auth_utils.py  common.py  config.py  email_sender.py  flow.py  log_utils.py  logging_config.py  media_group_buffer.py  routing.py  states.py  storage.py  template_engine.py
templates/: auth_already.txt  auth_banned.txt  auth_change_cancelled.txt  auth_change_confirm.txt  auth_changed.txt  auth_invalid.txt  auth_not_registered.txt  auth_start.txt  auth_success.txt  email_added.txt  email_banned.txt  email_removed.txt  email_required.txt  email_status_found.txt  email_status_not_found.txt  email_subject.txt  enter_message.txt  help_admin.txt  help_template.txt  help_user.txt  invalid_input.txt  invalid_topic.txt  message_template.txt  message_too_long.txt  my_id.txt  not_authorized.txt  rate_limit_exceeded.txt  select_topic.txt  select_topic_intro.txt  support_email.html  ticket_sent.txt  ticket_summary.txt  welcome_user.txt
